--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,12 @@
         "kartik-v/yii2-grid": "*",
         "kartik-v/yii2-mpdf": "*",
         "kartik-v/yii2-export": "*",
-        "dmstr/yii2-adminlte-asset": "2.*"
+        "dmstr/yii2-adminlte-asset": "2.*",
+        "miloschuman/yii2-highcharts-widget": "dev-master",
+        "yiisoft/yii2-jui": "^2.0",
+        "dektrium/yii2-user": "0.9.*@dev",
+        "dektrium/yii2-rbac": "1.0.0-alpha@dev",
+        "mdmsoft/yii2-admin": "~2.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
